lab1/Test/L1-A-13-25.output
Error Type B at Line 13
Error Type B at Line 19
Error Type B at Line 30
Error Type A at Line 36
Error Type B at Line 47
Error Type B at Line 54
Error Type B at Line 55
Error Type A at Line 59
Error Type B at Line 63
Error Type A at Line 78
Error Type B at Line 80
